# AutoCare.Agent

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.ps1
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: architecture-decisions.md  guia-arquitetura-python.md
specs/001-agent-service-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-service-foundation/checklists/: requirements.md
src/autocare_agent/: __init__.py  actions.py  app.py  config.py  llm.py  logging.py  orchestrator.py  safety.py  schemas.py
src/autocare_agent/api/: app.py  dependencies.py  (+1 more)
tests/: conftest.py  test_actions.py  test_api.py  test_config.py  test_llm.py  test_logging.py  test_orchestrator.py  test_schemas.py
tests/contract/: test_agent_api_contract.py  test_authoritative_result_contract.py  test_crisis_contract.py  test_internal_tools_contract.py
tests/integration/: test_action_authority.py  test_agent_process.py  test_crisis_flow.py  test_handoff_flow.py  test_health.py  test_observability.py  test_performance.py  test_resilience.py
wiki/: ARQUITETURA.md  COMECE_AQUI.md  COMPONENTES.md  FLUXOS_PRINCIPAIS.md  GLOSSARIO.md  INDEX.md  README.md  REGRAS_NEGOCIO.md  RESUMO_EXECUTIVO.md  STACK_REAL.md  SUMARIO.md  VISAO_GERAL.md
(+48 files in other folders)
