[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocare-agent"
version = "0.1.0"
description = "Safe conversational agent behind the AutoCare internal application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "langgraph>=1.0,<2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autocare_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["autocare_agent"]
